apps/media/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: music-assistant
    app.kubernetes.io/name: music-assistant
  name: music-assistant
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: music-assistant
    app.kubernetes.io/name: music-assistant
  type: ClusterIP
